@@ -8,8 +8,8 @@ android {
         applicationId "org.moire.opensudoku"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 20190925
-        versionName "2.6.1"
+        versionCode 20191010
+        versionName "2.6.2"
     }
 
     buildTypes {
