@@ -272,5 +272,8 @@
     <string name="solve_puzzle">Resolver puzzle</string>
     <string name="solve_puzzle_confirm">¿Estás seguro de que quieres ver la solución?</string>
     <string name="used_solver">¡Has usado el solucionador para resolver el puzzle!</string>
-    <string name="puzzle_not_solved">¡El puzzle no se ha resuelto! ¡Comprueba si tienes errores antes de usar el solucionador!</string>
+    <string name="puzzle_not_solved">Este puzzle no tiene solución.</string>
+
+    <string name="hint_confirm">Esto introducirá el valor correcto en la celda seleccionada. ¿Quieres continuar?</string>
+    <string name="cannot_give_hint">No puedes obtener una pista para esa celda.</string>
 </resources>
